fix btn styles (nowrap)

--- a/src/components/buttonLink/styles.scss
+++ b/src/components/buttonLink/styles.scss
@@ -35,6 +35,7 @@
   line-height: 32px;
   color: #ffffff;
   transition: opacity 0.2s ease-in;
+  white-space: nowrap;
   &:hover {
     background: #9d9d9d;
   }
